Room Heade4r Created 22

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="https://static.vecteezy.com/system/resources/thumbnails/002/135/986/small/chat-wing-logo-design-illustration-free-vector.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/chats.PNG" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
